// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render \`Disabled\` variant 1`] = `
<div>
  <button
    class="cds-button--primary cds-button--medium cds-button--undefined"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Button should render \`Primary\` mode with \`Medium\` size 1`] = `
<div>
  <button
    class="cds-button--primary cds-button--medium cds-button--undefined"
  >
    Click Me!
  </button>
</div>
`;

exports[`Button should render \`Secondary\` mode with \`Small\` size 1`] = `
<div>
  <button
    class="cds-button--secondary cds-button--small cds-button--undefined"
  >
    Click Me!
  </button>
</div>
`;

exports[`Button should render \`Tertiary\` mode with \`Large\` size 1`] = `
<div>
  <button
    class="cds-button--tertiary cds-button--large cds-button--undefined"
  >
    Click Me!
  </button>
</div>
`;
